# smallchange

./: .hgignore  AUTHORS  AutoFile_8h_source.html  BUGS.txt  CMakeLists.txt  CoinEnvironment_8h_source.html  Coinboard_8h_source.html  CubicSplineEngine_8h_source.html  DynamicBaseKit_8h_source.html  DynamicNodeKit_8h_source.html  GLDepthBufferElement_8h_source.html  Init_8h_source.html  InterleavedArraysShape_8h_source.html  LegendKit_8h_source.html  Makefile.am  Makefile.in  NEWS  PickCallback_8h_source.html  PickSwitch_8h_source.html  README  README.md  Rot2Heading_8h_source.html  SbBox3_8h_source.html  SbCubicSpline_8h_source.html  SbHash_8h_source.html  SbPlane_8h_source.html  SbVec3_8h_source.html  SceneryGL_8h_source.html  SceneryGlue_8h_source.html  ShapeScale_8h_source.html  SkyDome_8h_source.html  SmAnnotationAxis_8h_source.html  SmAnnotationWall_8h_source.html  SmAxisDisplayKit_8h_source.html  SmAxisKit_8h_source.html  SmBillboardClipPlane_8h_source.html  SmCameraControlKit_8h_source.html  SmColorGradientElement_8h_source.html  SmColorGradient_8h_source.html  SmCoordinateSystem_8h_source.html  (+460 more)
cfg/: gendsp.pl.in  smallchange.m4
cpack.d/: CMakeLists.txt  CPackConfig-debian.cmake.in  CPackConfig-default.cmake.in  CPackConfig-fedora.cmake.in  CPackConfig.template
data/: SceneGraphItems.fig  SceneGraphItems.iv
docs/: CMakeLists.txt  modules.dox  smallchange.doxygen.awesome.cmake.in  smallchange.doxygen.cmake.in  smallchange.doxygen.in
docs/doxygen/: Coin_main.dox  Doxyfile
lib/: CMakeLists.txt  Makefile.am  Makefile.in
lib/SmallChange/: CMakeLists.txt  Makefile.am  Makefile.in  SmallChange.h  SmallChange.rc.cmake.in  basic.h.cmake.in  dummy.cpp
lib/SmallChange/actions/: CMakeLists.txt  Makefile.am  Makefile.in  SmToVertexArrayShapeAction.h  SoGenerateSceneGraphAction.cpp  SoGenerateSceneGraphAction.h  SoTweakAction.cpp  SoTweakAction.h  ToVertexArrayShapeAction.cpp
lib/SmallChange/draggers/: CMakeLists.txt  Makefile.am  Makefile.in  SmRangeTranslate1Dragger.cpp  SmRangeTranslate1Dragger.h  SoAngle1Dragger.cpp  SoAngle1Dragger.h  SoAngle1Manip.cpp  SoAngle1Manip.h
lib/SmallChange/elements/: CMakeLists.txt  ColorGradientElement.cpp  GLDepthBufferElement.cpp  GLDepthBufferElement.h  Makefile.am  Makefile.in  SmColorGradientElement.h  SmSceneryViewElement.cpp  SmSceneryViewElement.h  UTMElement.cpp  UTMElement.h
lib/SmallChange/engines/: CMakeLists.txt  CubicSplineEngine.cpp  CubicSplineEngine.h  Makefile.am  Makefile.in  Rot2Heading.cpp  Rot2Heading.h  SmInverseRotation.cpp  SmInverseRotation.h
lib/SmallChange/eventhandlers/: CMakeLists.txt  Makefile.am  Makefile.in  SmEventHandler.cpp  SmEventHandler.h  SmExaminerEventHandler.cpp  SmExaminerEventHandler.h  SmHelicopterEventHandler.cpp  SmHelicopterEventHandler.h  SmPanEventHandler.cpp  SmPanEventHandler.h  SmSphereEventHandler.cpp  SmSphereEventHandler.h
lib/SmallChange/misc/: CMakeLists.txt  Envelope.cpp  Init.cpp  Init.h  Makefile.am  Makefile.in  SbBox3.h  SbCubicSpline.cpp  SbCubicSpline.h  SbHash.h  SbList.h  SbPlane.h  SbVec3.h  SceneManager.cpp  SceneryGlue.cpp  SceneryGlue.h  SmEnvelope.h  SmHash.h  SmSceneManager.h  cameracontrol.cpp  cameracontrol.h
lib/SmallChange/nodekits/: CMakeLists.txt  DynamicBaseKit.cpp  DynamicBaseKit.h  DynamicNodeKit.h  GeoMarkerKit.cpp  LegendKit.cpp  LegendKit.cpp.orig  LegendKit.h  Makefile.am  Makefile.in  NormalsKit.cpp  OceanKit.cpp  PopupMenuKit.cpp  SbList.h  SmAnnotationAxis.cpp  SmAnnotationAxis.h  SmAnnotationWall.cpp  SmAnnotationWall.h  SmAxisDisplayKit.cpp  SmAxisDisplayKit.h  SmAxisKit.cpp  SmAxisKit.h  SmCameraControlKit.cpp  SmCameraControlKit.h  SmDynamicObjectKit.cpp  SmDynamicObjectKit.h  SmGeoMarkerKit.h  SmNormalsKit.h  SmOceanKit.h  SmPieChart.cpp  SmPieChart.h  SmPopupMenuKit.h  SmRangeTranslate1DraggerKit.cpp  SmRangeTranslate1DraggerKit.h  SmTooltipKit.cpp  SmTooltipKit.h  SmTrackPointKit.cpp  SmTrackPointKit.h  SmVesselKit.cpp  SmVesselKit.h  (+11 more)
lib/SmallChange/nodes/: AutoFile.cpp  AutoFile.h  CMakeLists.txt  CoinEnvironment.cpp  CoinEnvironment.h  Coinboard.cpp  Coinboard.h  ColorGradient.cpp  DepthBuffer.cpp  DepthBuffer.h  FrustumCamera.cpp  FrustumCamera.h  InterleavedArraysShape.cpp  InterleavedArraysShape.h  Makefile.am  Makefile.in  PickCallback.cpp  PickCallback.h  PickSwitch.cpp  PickSwitch.h  Scenery.cpp  Scenery.h  SceneryGL.cpp  SceneryGL.h  SceneryRender.icc  SceneryView.cpp  ShapeScale.cpp  ShapeScale.h  SkyDome.cpp  SkyDome.h  SmBillboardClipPlane.cpp  SmBillboardClipPlane.h  SmColorGradient.h  SmCoordinateSystem.cpp  SmCoordinateSystem.h  SmDepthBuffer.cpp  SmDepthBuffer.h  SmHQSphere.cpp  SmHQSphere.h  SmHeadlight.cpp  (+57 more)
models/: PieCharts.iv  SwitchboardOperator.iv  Tooltip.iv
packaging/: description-summary.txt
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+71 more)
sound/: ALTools.cpp  ALTools.h  SbAudioWorkerThread.cpp  SbAudioWorkerThread.h  Simple.dsp  Simple.dsw  SoAudioClip.cpp  SoAudioClip.h  SoAudioClipP.h  SoAudioClipStreaming.cpp  SoAudioClipStreaming.h  SoAudioClipStreamingP.h  SoAudioDevice.cpp  SoAudioDevice.h  SoAudioDeviceP.h  SoAudioRenderAction.h  (+18 more)
src/: .cvsignore  Makefile.am  Makefile.in  README
src/nodes/: DepthBuffer.cpp  DepthBuffer.h  Makefile.am  Makefile.in  ViewportRegion.cpp  ViewportRegion.h
test-code/: CMakeLists.txt  cameracontrol.cpp.in  envelope.cpp  femtest.cpp  femtest.cpp.in  frustum.cpp.in  iv2scenegraph.cpp  legendtest.cpp  legendtest.cpp.in  lodexttest.cpp  lodexttest.cpp.in  sc2iv.cpp  sc_viewer.cpp.in  scenemgr.cpp.in  scenery.cpp.in  sotext2set.cpp  sotext2set.cpp.in  tcbcurve.cpp.in  texturetext2.cpp  tooltip.cpp.in  tovertexarray.cpp  vessel.cpp  vessel.cpp.in
(+29 files in other folders)
